rusty-cdk-macros/tests/fails/timeout_boundary_high.rs
use rusty_cdk_macros::timeout;

fn example() {
    let t = timeout!(901);
}

fn main() {}